manifests/apps/busybox-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-test
  namespace: dev
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep","3600"]
